app-yaml/staging/ingress/ingress-fb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fb
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: fb-staging.pastikerja.xyz
    http:
      paths:
        - path:
          backend:
            serviceName: fb-staging
            servicePort: 80
