app-yaml/staging/ingress/ingress-landing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-landing
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: landing-staging.pastikerja.xyz
    http:
      paths:
        - path:
          backend:
            serviceName: landing-page
            servicePort: 80
