app-yaml/staging/ingress/ingress-wp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wordpress-staging.pastikerja.xyz
    http:
      paths:
        - path:
          backend:
            serviceName: wordpress-service
            servicePort: 80
